# HARVEST

./: .env.example  .gitignore  =1.23.0  =3.0.0  ADMIN_GUIDE.md  BEFORE_AFTER_COMPARISON.md  DEPLOYMENT.md  DEPLOYMENT_ARCHITECTURE.md  DEPLOYMENT_CONFIGURATION_CHANGELOG.md  DEPLOYMENT_QUICK_REFERENCE.md  DEPLOYMENT_SUBPATH.md  DEPLOY_ENHANCED_VIEWER.md  DOI_BATCH_MANAGEMENT_PLAN.md  FRONTEND_REFACTORING_COMPLETE.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  INSTALLATION.md  NGINX_VS_INTERNAL_MODE.md  PDF_DOWNLOAD_INTEGRATION.md  PDF_DOWNLOAD_SUMMARY.md  PDF_HIGHLIGHTING_FEATURE.md  PDF_VIEWER_IMPROVEMENTS.md  QUICK_FIX_GUIDE.md  README.md  SECURITY_SUMMARY.md  SERVER_CONFIGURATION_SUMMARY.md  SYSTEMD_SERVICE_FIX.md  TRAIT_EXTRACTION_IMPLEMENTATION.md  app.py  asreview_client.py  asreview_mock_service.py  cleanup_orphaned_sentences.py  config.py  create_admin.py  diagnose_login.py  email_config.py  email_service.py  email_verification_store.py  gunicorn.conf.py  harvest_be.py  (+46 more)
.bolt/: prompt
.github/: copilot-instructions.md
assets/: .gitkeep  ASREVIEW_SCREENSHOT_INSTRUCTIONS.md  README.md  admin_guide.md  annotator_guide.md  custom.css  db_model.md  help.md  participate.md  pdf_viewer.html  pdf_viewer_enhanced.html  qa.md  schema.md  text2kg_pipeline.md
docs/: CONSOLIDATION_SUMMARY.md  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_QUICK_REFERENCE.md  EMAIL_VERIFICATION.md  EMAIL_VERIFICATION_CONFIG_PLAN.md  EMAIL_VERIFICATION_DATABASE_ARCHITECTURE.md  EMAIL_VERIFICATION_PLAN.md  FRONTEND_EMAIL_VERIFICATION_GUIDE.md  GDPR_PRIVACY.md  INSTALLATION.md  (+30 more)
(+57 files in other folders)
