[project]
name = "t2t-training"
version = "0.1.0"
description = ""
authors = [
    {name = "MD Sharma",email = "M.D.Sharma@exeter.ac.uk"}
]
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "jupyter (>=1.1.1,<2.0.0)",
    "ipykernel (>=6.30.1,<7.0.0)",
    "python-doctr[tf] (>=1.0.0,<2.0.0)",
    "pymupdf4llm (>=0.0.27,<0.0.28)",
    "spacy (>=3.8.7,<4.0.0)",
    "pandas (>=2.3.2,<3.0.0)",
    "openai (>=1.102.0,<2.0.0)",
    "flask (>=3.0.0,<4.0.0)",
    "flask-cors (>=4.0.0,<5.0.0)",
    "dash (>=2.17.0,<3.0.0)",
    "dash-bootstrap-components (>=1.6.0,<2.0.0)",
    "requests (>=2.31.0,<3.0.0)",
    "pypdf (>=3.17.0,<4.0.0)",
    "werkzeug (>=3.0.0,<4.0.0)",
    "gunicorn (>=21.2.0,<22.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"